--- a/design.ui
+++ b/design.ui
@@ -54,7 +54,7 @@ QDoubleSpinBox {background-color: #FFFFFF;} </string>
           </sizepolicy>
          </property>
          <property name="title">
-          <string>Connection Settings</string>
+          <string>Connection</string>
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_3">
           <item>
@@ -355,7 +355,7 @@ QDoubleSpinBox {background-color: #FFFFFF;} </string>
              <item>
               <widget class="QGroupBox" name="TriggerGroupBox">
                <property name="title">
-                <string>Trigger Settings</string>
+                <string>Trigger</string>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_2">
                 <property name="spacing">
@@ -571,7 +571,7 @@ QDoubleSpinBox {background-color: #FFFFFF;} </string>
     <item>
      <widget class="QGroupBox" name="RandomGroupBox">
       <property name="title">
-       <string>Random Mode Settings</string>
+       <string>Random Mode</string>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_5">
        <property name="spacing">
